--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "aos": "3.0.0-beta.6",
     "nuxt": "^3.17.3",
     "tailwindcss": "^4.1.7",
     "vue": "^3.5.13",
