--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "aos": "3.0.0-beta.6",
+    "countup.js": "^2.8.2",
     "nuxt": "^3.17.3",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.7",
